fix(Info): number vertical align center

--- a/src/info/index.less
+++ b/src/info/index.less
@@ -10,8 +10,7 @@
   color: @info-color;
   font-weight: @info-font-weight;
   font-size: @info-font-size;
-  font-family: @info-font-family;
-  line-height: @info-size - @info-border-width * 2;
+  line-height: 1.2;
   text-align: center;
   background-color: @info-background-color;
   border: @info-border-width solid @white;
